--- a/app/src/main/res/layout/single_row.xml
+++ b/app/src/main/res/layout/single_row.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/imageView"
@@ -21,6 +22,7 @@
         android:layout_weight="0.8"
         android:text="pot name"
         android:textSize="18sp"
+        android:paddingLeft="10dp"
         android:textStyle="bold" />
 
 </LinearLayout>
